--- a/extras/lib_contentmap/language/de-DE/de-DE.contentmap.ini
+++ b/extras/lib_contentmap/language/de-DE/de-DE.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="Es gibt in diesem Modul keinen Artikel mit den angegebenen K
 CONTENTMAP_GET_DIRECTIONS="Berechnen Sie den Abstand"
 CONTENTMAP_PLEASE_SAVE="Speichern, um das Symbol anzuzeigen aktualisiert"
 CONTENTMAP_MARKERS_PREVIEW="Vorschau icon marker"
+CONTENTMAP_FROM_ADDRESS="From address"
