--- a/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.ini
+++ b/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="Apparemment aucun de vos articles ne contiennent de coordonn
 CONTENTMAP_GET_DIRECTIONS="Calculez la distance"
 CONTENTMAP_PLEASE_SAVE="Enregistrer pour afficher l'icône de mise à jour"
 CONTENTMAP_MARKERS_PREVIEW="Aperçu icône marker"
+CONTENTMAP_FROM_ADDRESS="From address"
