--- a/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION = "Zie de documentatie."
 CONTENTMAP_NO_DATA = "Het lijkt erop dat je geen voorwerpen met coördinaten hebben. Allereerst moet je geolocalize een aantal artikelen."
 
 CONTENTMAP_STREETVIEW="Activeer Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
