--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Se dokumentation."
 CONTENTMAP_NO_DATA="Det verkar som dina artiklar saknar koordinater. Du borde börja med att geolokalisera några."
 
 CONTENTMAP_STREETVIEW="Aktivera Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
