--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="Det finns inga artiklar innehållande koordinater som kan vi
 CONTENTMAP_GET_DIRECTIONS="Beräkna avståndet"
 CONTENTMAP_PLEASE_SAVE="Spara för att visa ikonen uppdateras"
 CONTENTMAP_MARKERS_PREVIEW="Preview icon marker"
+CONTENTMAP_FROM_ADDRESS="From address"
