--- a/trunk/extras/lib_contentmap/language/de-DE/de-DE.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/de-DE/de-DE.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Siehe Dokumentation."
 CONTENTMAP_NO_DATA="Es scheint, dass Sie keine Koordinaten eingegeben haben. Bitte geben Sie in Ihrem Artikel die Koordinaten eingeben."
 
 CONTENTMAP_STREETVIEW="Aktivieren Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
