--- a/trunk/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Mirar la documentación."
 CONTENTMAP_NO_DATA="No hay artículos conteniendo coordenadas. Lo primero de todo, deberías geolocalizar algunos artículos."
 
 CONTENTMAP_STREETVIEW="Activar Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
