--- a/trunk/extras/lib_contentmap/language/es-ES/es-ES.contentmap.ini
+++ b/trunk/extras/lib_contentmap/language/es-ES/es-ES.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="No hay artículos con coordenadas visibles en este módulo. 
 CONTENTMAP_GET_DIRECTIONS="Calcular la distancia"
 CONTENTMAP_PLEASE_SAVE="Guardar para que aparezca el icono de actualización"
 CONTENTMAP_MARKERS_PREVIEW="Ver icon marker"
+CONTENTMAP_FROM_ADDRESS="From address"
