--- a/trunk/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Voir la documentation."
 CONTENTMAP_NO_DATA="Apparemment aucun de vos articles ne contiennent de coordonnées. Avant tout vous devez géolocaliser vos articles (Voir options des métadonnées dans vos articles)."
 
 CONTENTMAP_STREETVIEW="Activer Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
