--- a/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -100,8 +100,7 @@ CONTENTMAP_NO_DATA="Sembra che tu non abbia articoli con coordinate associate. C
 
 CONTENTMAP_STREETVIEW="Abilita Street view"
 
-
 CONTENTMAP_HIDE_STREETVIEW_CONTROL="Nascondi controlli Street View"
 CONTENTMAP_HIDE_ZOOM_CONTROL="Nascondi controlli Zoom"
-CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Nascondi i controlli di Street View"
-CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Nascondi i controlli di Zoom"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Nascondi i controlli di Street View sulla mappa"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Nascondi i controlli di Zoom sulla mappa"
