--- a/trunk/extras/lib_contentmap/language/nb-NO/nb-NO.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/nb-NO/nb-NO.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Se dokumentasjon."
 CONTENTMAP_NO_DATA="Det ser ut som om du ikke har artikler som inneholder koordinater. Du må førts geolokalisere noen artikler."
 
 CONTENTMAP_STREETVIEW="Slå på Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
