--- a/trunk/extras/lib_contentmap/language/nb-NO/nb-NO.contentmap.ini
+++ b/trunk/extras/lib_contentmap/language/nb-NO/nb-NO.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="Det er ingen artiklert som inneholder koordinater synlig for
 CONTENTMAP_GET_DIRECTIONS="Få veibeskrivelse"
 CONTENTMAP_PLEASE_SAVE="Vennligst lagre for å se oppdatert forhåndsvisning av ikonet"
 CONTENTMAP_MARKERS_PREVIEW="Forhåndsvis markør"
+CONTENTMAP_FROM_ADDRESS="From address"
