--- a/trunk/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.ini
+++ b/trunk/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA = "Er zijn geen artikelen met invulde coördinaten zichtbaar 
 CONTENTMAP_GET_DIRECTIONS="Bereken de afstand"
 CONTENTMAP_PLEASE_SAVE="Opslaan om het pictogram weer bijgewerkt"
 CONTENTMAP_MARKERS_PREVIEW="Voorbeeldpictogram marker"
+CONTENTMAP_FROM_ADDRESS="From address"
