--- a/trunk/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Veja a documentação."
 CONTENTMAP_NO_DATA="Parece que não dispõe de artigos com essas coordenadas. Antes de tudo, deve geolocalizar alguns artigos."
 
 CONTENTMAP_STREETVIEW="Ativar Street view"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
