--- a/trunk/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.ini
+++ b/trunk/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.ini
@@ -4,3 +4,4 @@ CONTENTMAP_NO_DATA="Não existem artigos contendo as coordenadas visíveis por e
 CONTENTMAP_GET_DIRECTIONS="Calcular a distância"
 CONTENTMAP_PLEASE_SAVE="Salvar para exibir o ícone de atualização"
 CONTENTMAP_MARKERS_PREVIEW="ícone de visualização marker"
+CONTENTMAP_FROM_ADDRESS="From address"
