--- a/trunk/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
@@ -99,3 +99,8 @@ CONTENTMAP_DOCUMENTATION="Просмотр документации."
 CONTENTMAP_NO_DATA="Кажется, у вас нет статей, содержащих координаты. Прежде всего, вы должны определить координаты некоторых статей."
 
 CONTENTMAP_STREETVIEW="Включить вид улиц"
+
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
