--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -10,64 +10,64 @@ CONTENTMAP_NOT_INSTALLED="No instalado"
 
 ; Map Options section
 ;CONTENTMAP_MAP_OPTIONS_LBL="Opciones del Mapa"
-CONTENTMAP_MAP_LAYOUT="Capa del Mapa"
+CONTENTMAP_MAP_LAYOUT="Opciones del mapa"
 CONTENTMAP_INFOWINDOWS="Globos Marcadores"
 CONTENTMAP_WIDTH="Ancho"
-CONTENTMAP_MAPWIDTH_DSC="La anchura del Mapa se mide en pixels o en el porcentaje basado en el campo 'Unidades'."
-CONTENTMAP_HEIGHT="Alto"
-CONTENTMAP_MAPHEIGHT_DSC="Altura del Mapa. Siempre medida en pixels."
+CONTENTMAP_MAPWIDTH_DSC="La anchura del mapa se mide en pixels o en el porcentaje basado en el campo 'Unidades'."
+CONTENTMAP_HEIGHT="Altura"
+CONTENTMAP_MAPHEIGHT_DSC="Altura del mapa. Siempre medida en pixels."
 CONTENTMAP_UNITS_LBL="Unidades"
 CONTENTMAP_PIXELS="px"
 CONTENTMAP_PERCENT="%"
-CONTENTMAP_ZOOM_LBL="nivel de Zoom"
+CONTENTMAP_ZOOM_LBL="Nivel de zoom"
 CONTENTMAP_ZOOM_DSC="Selecciona el nivel de zoom del mapa"
 CONTENTMAP_AUTOMATIC="Auto"
 CONTENTMAP_CENTER_LBL="Centro"
 CONTENTMAP_CENTER_DSC="Centrar el mapa con las coordenadas dadas (solo si en nivel de zoom no es 'auto')"
-CONTENTMAP_MAPTYPE_LBL="Tipo de Mapa"
+CONTENTMAP_MAPTYPE_LBL="Tipo de mapa"
 CONTENTMAP_MAPTYPE_ROADMAP="Carretera"
 CONTENTMAP_MAPTYPE_SATELLITE="Satélite"
-CONTENTMAP_MAPTYPE_HYBRID="Hibribo"
+CONTENTMAP_MAPTYPE_HYBRID="Hibrido"
 CONTENTMAP_MAPTYPE_TERRAIN="Terreno"
 CONTENTMAP_MARKERS_OPTIONS="Opciones de marcadores"
-CONTENTMAP_MARKERS_ICON_LBL="Iconos de Marcas"
+CONTENTMAP_MARKERS_ICON_LBL="Iconos de marcadores"
 CONTENTMAP_MARKERS_ICON_DSC="Sube tu propio icono PNG en /media/contentmap/markers/icons/"
 CONTENTMAP_MARKERS_ACTION_LBL="Acción en click"
-CONTENTMAP_MARKERS_ACTION_DSC="Selecciona la acción a ejecutar cuando se clicla una marca"
+CONTENTMAP_MARKERS_ACTION_DSC="Selecciona la acción a ejecutar cuando se clica un marcador"
 CONTENTMAP_MARKERS_ACTION_BALLOON="Abrir un globo"
 CONTENTMAP_MARKERS_ACTION_REDIRECT="Direcionar al artículo"
 CONTENTMAP_MARKERS_CLUSTER_LBL="Conjunto"
-CONTENTMAP_MARKERS_CLUSTER_DSC="Los grupos marcados en un conjunto, incrementan el rendimiento del renderizado. Recomendable cuando el mapa contiene muchas marcas."
+CONTENTMAP_MARKERS_CLUSTER_DSC="Los grupos marcados en un conjunto, incrementan el rendimiento del renderizado. Recomendable cuando el mapa contiene muchos marcadores."
 CONTENTMAP_MARKERS_SHOW_DIRECTIONS_LBL="Mostrar el enlace 'Calcular la distancia'"
-CONTENTMAP_MARKERS_PREVIEW="Ver icon marker"
+CONTENTMAP_MARKERS_PREVIEW="Icono del marcador"
 CONTENTMAP_KML_URL_LBL="URL Track KML file"
-CONTENTMAP_KML_URL_DSC="You can insert the URL to your Track KML file inside your server, to display the track layer in the map."
+CONTENTMAP_KML_URL_DSC="Puede insertar la URL de tu file KML dentro de tu servidor, para mostrar la ruta en el mapa."
 
 ; Balloon on markers subsection
 CONTENTMAP_INFOWINDOW_LBL="Globos en marcadores"
-CONTENTMAP_INFOWINDOW_ACTION_LBL="Abrir glogo"
-CONTENTMAP_INFOWINDOW_ACTION_DSC="Muestra un globo en las marcas."
+CONTENTMAP_INFOWINDOW_ACTION_LBL="Abrir globo"
+CONTENTMAP_INFOWINDOW_ACTION_DSC="Muestra un globo en los marcadores."
 CONTENTMAP_INFOWINDOWWIDTH_DSC="Anchura máxima del Globo medida en pixeles."
 CONTENTMAP_INFOWINDOW_ACTION_CLICK="En click"
-CONTENTMAP_INFOWINDOW_ACTION_MOUSEOVER="Con el raton encima"
+CONTENTMAP_INFOWINDOW_ACTION_MOUSEOVER="Con el ratón encima"
 CONTENTMAP_INFOWINDOW_TARGET_LBL="URL ventana de destino"
 CONTENTMAP_INFOWINDOW_TARGET_DSC="Ventana de dirección cuando el contenido es clickado."
 CONTENTMAP_TARGET_SELF="Misma ventana: _self"
 CONTENTMAP_TARGET_BLANK="Nueva ventana: _blank"
 CONTENTMAP_TARGET_PARENT="Mismo marco: _parent"
 CONTENTMAP_TARGET_TOP="Marco superior: _top"
-CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Mostrar imagen"
+CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Imagen"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_DSC="Muestra la imagen de introducción asociada con los artículo."
-CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Mostrar el alias del autor"
-CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Mostrar fecha de creación"
-CONTENTMAP_INFOWINDOW_TEXT_SIZE_LBL="Limite de texto en el artículo."
+CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Alias del autor"
+CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Fecha de creación"
+CONTENTMAP_INFOWINDOW_TEXT_SIZE_LBL="Limite de texto en el artículo"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Expecifica el límite de caracteres a mostrar en un artículo."
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opciones de Filtrado"
-CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Filtro dinámico de las categorías bajo el mapa"
 CONTENTMAP_FEATURED_ARTICLES_LBL="Artículos Destacados"
-CONTENTMAP_FEATURED_ARTICLES_DSC="Filtro basado en 'Destadados'."
+CONTENTMAP_FEATURED_ARTICLES_DSC="Filtro basado en 'Destacados'."
 CONTENTMAP_ONLYFEATURED="Solo destacados"
 CONTENTMAP_AUTHORS_LBL="Autores"
 CONTENTMAP_SELECT_ITEMS_DSC="Seleccionar una o más opciones"
@@ -100,7 +100,7 @@ CONTENTMAP_NO_DATA="No hay artículos conteniendo coordenadas. Lo primero de tod
 
 CONTENTMAP_STREETVIEW="Activar Street view"
 
-CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
-CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
-CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
-CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL="Oculta controles de Street View"
+CONTENTMAP_HIDE_ZOOM_CONTROL="Oculta controles de zoom"
+CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Oculta los controles de Street View en el mapa"
+CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Oculta los controles de Zoom en el mapa"
