--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -56,18 +56,18 @@ CONTENTMAP_TARGET_SELF="Stessa finestra: _self"
 CONTENTMAP_TARGET_BLANK="Nuova finestra: _blank"
 CONTENTMAP_TARGET_PARENT="Frame superiore: _parent"
 CONTENTMAP_TARGET_TOP="Frame più esterno: _top"
-CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Mostra immagine"
+CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Immagine"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_DSC="Visualizza l'immagine introduttiva associata agli articoli"
-CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Mostra l'alias dell'autore"
-CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Mostra la data di creazione"
+CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Alias dell'autore"
+CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Data di creazione"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_LBL="Limite testo articolo"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Imposta un limite al numero di caratteri del testo dell'articolo da mostrare."
 
 ; Sezione Opzioni del filtro
 CONTENTMAP_FILTERING_OPTIONS_LBL="Opzioni del filtro"
-CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Mostra il filtro dinamico sulle categorie sotto la mappa"
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Filtro dinamico sulle categorie sotto la mappa"
 CONTENTMAP_FEATURED_ARTICLES_LBL="Articoli in evidenza"
-CONTENTMAP_FEATURED_ARTICLES_DSC="Fitro basato sull'alltributo 'In evidenza'."
+CONTENTMAP_FEATURED_ARTICLES_DSC="Fitro basato sull'attributo 'In evidenza'."
 CONTENTMAP_ONLYFEATURED="Solo articoli in evidenza"
 CONTENTMAP_AUTHORS_LBL="Autori"
 CONTENTMAP_SELECT_ITEMS_DSC="Seleziona uno o più elementi"
