--- a/language/en-GB/en-GB.com_contentmap.sys.ini
+++ b/language/en-GB/en-GB.com_contentmap.sys.ini
@@ -6,74 +6,10 @@ COM_CONTENTMAP_DESCRIPTION="Shows in a Google Map places associated to articles"
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. Remove the signature [Powered by ContentMap] below the maps, by purchasing a paid version. There aren`t other limitations in functionality, but by purchasing a license code you help us continue development and support."
+COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. Remove the signature [Powered by ContentMap] below the maps, by purchasing a paid version.<br /> There aren`t other limitations in functionality, but by purchasing a license code you help us continue development and support."
 COM_CONTENTMAP_BUYNOW="Buy now."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instructions"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin usage"
-COM_CONTENTMAP_INSTRUCTIONS_DSC="
-<p>
-<img src='http://www.turismo.eu/download/en-GB/article-manager.jpg'>
-<h3>Step 1: Edit your articles</h3>
-Open your Article Manager and create a new article, or edit an existing one.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/external-reference.jpg'>
-<h3>Step 2: Insert coordinates</h3>
-Open Metadata Options, and fill out the field 'External Reference' using the coordinates of the place related to the current article. Use a dot (.) as decimal separator and a comma (,) between latitude and longitude. Use Minus sign (-) for negative values. Plus sign (+) is accepted as well, but it is not mandatory. The button on the right side starts a visual search or 'by address' search. When done, click the button 'Return data'.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/select-image.jpg'>
-<h3>Step 3: Optional image</h3>
-Optionally specify a small image related to the article. It will be shown inside the balloon associated to the marker within the map. Related parameters, like 'Image Float', 'Alt text' and 'Caption' are used as well, but note that only the field 'Intro image' is used by the balloon. The field 'Full article image' will be ignored.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/article-view.jpg'>
-<h3>Step 4: See the result</h3>
-Browse your website to the article page. You should see a Google map at the botton of the page itself, containing a marker based on the coordinates specified.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/plugin-manager.jpg'>
-<h3>Step 5: Troubleshooting</h3>
-If you don't see the map, or if it doesn't meet your requirements, open your Plugin Manager.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/plugin-options.jpg'>
-<h3>Step 6: Customization</h3>
-Ensure the plugin is enabled and change the setting, based on your requirements, then save and close.
-</p>
-<br class='clr'>
-"
-
+COM_CONTENTMAP_INSTRUCTIONS_DSC="<p>Once installed ContentMap from the Extensions Manager, you will find in your site the ContentMap plugin and module.</p><p>ContentMap plugin inserts a map under the text of the article with a single marker placed according to the coordinates within the article itself. <a href='http://www.turismo.eu/itinerari/401-due-giorni-a-roma-ecco-cosa-vedere.html' target='_blank'>Exemple</a></p><br /><h3>Step 1: Edit your articles and insert the coordinates</h3><p>Open the <strong>Plugin Manager</strong> and make sure that the ContentMap plugin is enabled.<br /> Open the <strong>Article Manager</strong> and create a new article, or edit an existing one.<br />Click on the tab 'Publish'.<br />On the bottom right you will find the parameter <strong><em>ContentMap</em></strong>:<br /><br />By clicking on the icon next to it a window will open and will help you get the coordinates of the location associated with the current article and correctly position the marker on the map. Enter the address in the <em>'Please enter address'</em>, click on <em>'Search'</em> and at the end of search click on the button <em>'Return Data'</em>.<p><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_fase1b.png'></p><p>You can also fill out directly the field 'ContentMap': use a dot (.) as decimal separator and a comma (,) between latitude and longitude. Use Minus sign (-) for negative values. Plus sign (+) is accepted as well, but it is not mandatory. <br /><br />The parameter <strong><em>Marker style</em></strong> allows you to choose a custom marker for this article that goes to replace the marker set in the parameters of the plugin. <br /> <br /> Now you can save the article in frontend and see the result: a Google Map will appear below the article text.</p><br /><h3><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_fase2_small.png' style='float: right; margin: 5px;'>Step 2: Insert an image on the balloon</h3><p>Clicking in frontend on the the marker just entered, it opens a balloon containing the article title and the intro text. If you want to also insert an image, you can bring up the picture in the intro text of the article. <br /> Then back to <strong> Management Articles </strong> and let's edit the article, open the tab 'Images and links'. Select an <strong><em>Intro Image</em> </strong> and save. Check the site and you'll see that the image appears in the balloon. The parameters 'Image Float', 'Alt text' and 'Caption' will be used also, but consider that only the parameter 'Intro Image' is used in the balloon. The parameter 'Full article image' will instead be ignored. <p> If you do not see the parameter 'Intro Image', check in Article Manager> Options> Editing Layout that the parameter 'Administrator Images and Links' is set to Yes </p><br /><h3>Step 3: Parameters customization</h3><p>Open <strong>Plugin Manager  &gt; ContentMap</strong> and you will find all the available parameters to customize your maps within the articles:</p><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_fase3.png' alt='With Get Directions link you can obtain this result' style='float: right; margin: 5px;' /><ul><li><em>Width</em>: you can set a fixed width in pixels or percentage.</li><li><em>Height</em>: you can set a fixed height in pixels.</li><li><em>Zoom level</em>: you can set the default zoom maps from 1 (less zoom) to 21 (higher zoom).</li><li><em>Map type</em>: you can choose between Road, Satellite, Hybrid and Terrain map.</li><li><em>Enabled Street view</em>: if enabled, this parameter will insert the street view below the maps, a feature of great visual impact as it allows you to actually see the place indicated by the marker.</li><li><em>Markers icon</em>: this parameter sets a default icon for all maps. The options are many, but it is also possible to add other icons directly in the folder media/contentmap/markers/icons</li><li><em>Open balloon</em>: you can choose whether to open the balloon with a click, hover or disable the opening.</li><li><em>Width</em>: you can set the maximum width of the balloon, in pixels.</li><li><em>Show title</em>: sets whether to show or hide the article title inside the balloon.</li><li><em>Linked titles</em>: if set to Yes, the article title inside the balloon will have a link to the article itself.</li><li><em>URL Target Window</em>: sets the target of the link of the article title inside the balloon.</li><li><em>Show image</em>: sets whether or not to display the image associated with the intro text(see Step 2)</li><li><em>Show author alias</em>: if set to Show, and if the parameter 'Created by alias' has been compiled, it will appear in the balloon.</li><li><em>Show creation date</em>: you can choose whether to show the creation date of the article in the balloon.</li><li><em>Show Intro Text</em>: you can choose whether to show the intro text within the balloon.</li><li><em>Article text limit</em>: sets a limit to the number of characters displayed in the intro text within the balloon.</li><li><em>Show 'Get Directions' link</em>: if set to Show, within the balloon will appear the link to Google Maps to calculate your route to get to the point marked by the marker, the link to see the street view of the place and a field where you can enter an address and see so directly in the map the route to the place indicated (look the image above).</li></ul> <br /><br />"
 MOD_CONTENTMAP_INSTRUCTIONS_TITLE="Module usage"
-MOD_CONTENTMAP_INSTRUCTIONS_DSC="
-<p>
-<img src='http://www.turismo.eu/download/en-GB/contentmap-module-new.jpg'>
-<h3>Step 1: Module creation</h3>
-Open Module Manager and create a new module selecting 'ContentMap' as module type.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/contentmap-module-filtering.jpg'>
-<h3>Step 2: Setting desidered filters</h3>
-The module groups places defined in articles, so unlike the plugin, article filters are available at the bottom of the options.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/contentmap-module.jpg'>
-<h3>Step 3: See the result</h3>
-Browse your website to the page where module is shown. You should see a Google map, containing a few markers based on the articles that meet filter criteria.
-</p>
-<br class='clr'>
-"
+MOD_CONTENTMAP_INSTRUCTIONS_DSC="The ContentMap module inserts, in the desired module position, a Google Maps with multiple markers associated with their articles. <a href='http://www.turismo.eu/itinerari.html' target='_blank'>Exemple</a><br /><p>After entering the coordinates in <u>at least</u> two articles, you can create with the module Google Maps with multiple markers, we see how ... </p><p>Open <strong>Module Manager</strong> and create a new 'ContentMap' module. <br /> Publish the module in one of the available module positions in your template, possibly one allowing enough space to see the map. <br /> Now check the site: your map is visible. <br /> As you can see it was very easy!</p><br /><h3><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_modulo.png' alt='ContentMap module' title='ContentMap module' style='float: right; margin: 5px;'/>Step 2: Setting desidered filters</h3><p>The module groups places defined in articles so, in addition to the above options described for the plugin, there are some other parameters available:</p><ul><li><em>Center</em>: centers the map with the specified coordinates.</li><li><em>URL Track KML file</em>: if you enter the URL of a KML track, this will be displayed on the map.</li><li><em>Cluster</em>: groups the markers increasing the performance of the display. Useful when the map contains many markers.</li><li><em>Show Filter based on categories under the map</em>: under the map shows the categories of Joomla, with the possibility to select which to see in the map. Useful if you have items with the coordinates, though belonging to different categories of Joomla.</li><li><em>Featured Articles</em>: you can choose whether to show all items, or only those featured, or only those not featured.</li><li><em>Filtering type</em>: you can set a filter inclusive (include only the categories specified in the next parameter) or exclusive (include all categories except as indicated in the following parameter)</li><li><em>Categories</em>: select which categories to include or exclude from the map.</li><li><em>Authors</em>: select which authors to include or exclude from the map.</li></ul><p></span> Beside an example of how can be your map</p><br />"
