--- a/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/trunk/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -27,7 +27,7 @@ CONTENTMAP_CENTER_DSC="Center the map on the given coordinates (only if zoom lev
 CONTENTMAP_MAPTYPE_LBL="Map type"
 CONTENTMAP_MAPTYPE_ROADMAP="Road map"
 CONTENTMAP_MAPTYPE_SATELLITE="Satellite"
-CONTENTMAP_MAPTYPE_HYBRID="Hybrib"
+CONTENTMAP_MAPTYPE_HYBRID="Hybrid"
 CONTENTMAP_MAPTYPE_TERRAIN="Terrain"
 CONTENTMAP_MARKERS_OPTIONS="Markers Options"
 CONTENTMAP_MARKERS_ICON_LBL="Markers icon"
@@ -56,16 +56,16 @@ CONTENTMAP_TARGET_SELF="Same window: _self"
 CONTENTMAP_TARGET_BLANK="New window: _blank"
 CONTENTMAP_TARGET_PARENT="Parent frame: _parent"
 CONTENTMAP_TARGET_TOP="Topmost frame: _top"
-CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Show image"
+CONTENTMAP_INFOWINDOW_SHOWIMAGE_LBL="Image"
 CONTENTMAP_INFOWINDOW_SHOWIMAGE_DSC="Show the intro image associated to the articles"
-CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Show author alias"
-CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Show creation date"
+CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Author alias"
+CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Creation date"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_LBL="Article text limit"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Set a limit of number of characters in article text to show."
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Filtering Options"
-CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Show Filter based on categories under the map."
+CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Filter based on categories under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL="Featured Articles"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Filter based on 'Featured' property."
 CONTENTMAP_ONLYFEATURED="Only featured"
