Aggiornate tutte le lingue

--- a/language/en-GB/en-GB.com_contentmap.sys.ini
+++ b/language/en-GB/en-GB.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Shows in a Google Map places associated to articles"
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. Remove the signature [Powered by ContentMap] below the maps, by purchasing a paid version.<br /> There aren`t other limitations in functionality, but by purchasing a license code you help us continue development and support."
+COM_CONTENTMAP_PURCHASE="This is a non-commercial version of ContentMap. Remove the signature below the maps, by purchasing a paid version.<br /> There aren`t other limitations in functionality, but by purchasing a license code you help us continue development and support."
 COM_CONTENTMAP_BUYNOW="Buy now."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instructions"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin usage"
