--- a/language/de-DE/de-DE.com_contentmap.sys.ini
+++ b/language/de-DE/de-DE.com_contentmap.sys.ini
@@ -6,74 +6,10 @@ COM_CONTENTMAP_DESCRIPTION="Zeigt Orte in einer Google Map, zugeordnet zum Artik
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Dies ist eine Nicht-Kommerzielle Version von ContentMap. Entfernen Sie die Signatur [Powered by ContentMap] unterhalb der Karten, durch den Kauf einer kostenpflichtigen Version. Es gibt keine weiteren Einschr&auml;nkungen in der Funktionalit&auml;t, jedoch helfen Sie uns durch den Kauf einer Lizenz das Produkt weiter zu Entwicklung."
+COM_CONTENTMAP_PURCHASE="Dies ist eine Nicht-Kommerzielle Version von ContentMap. Entfernen Sie die Signatur unterhalb der Karten, durch den Kauf einer kostenpflichtigen Version.<br />Es gibt keine weiteren Einschr&auml;nkungen in der Funktionalit&auml;t, jedoch helfen Sie uns durch den Kauf einer Lizenz das Produkt weiter zu Entwicklung."
 COM_CONTENTMAP_BUYNOW="Jetzt kaufen."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Anleitung"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Plugin Verwendung"
-COM_CONTENTMAP_INSTRUCTIONS_DSC="
-<p>
-<img src='http://www.turismo.eu/download/en-GB/article-manager.jpg'>
-<h3>Schritt 1: Bearbeiten Sie Ihre Artikel</h3>
-&Ouml;ffnen Sie Ihren Artikel Manager und erstellen Sie einen neuen Artikel oder bearbeiten Sie einen bestehenden.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/external-reference.jpg'>
-<h3>Schritt 2: Koordinaten eingeben</h3>
-&Ouml;ffnen Sie die Metadata Optionen, und f&uuml;llen Sie das Feld 'Externe Referenz' mit den Koordinaten des Ortes im Zusammenhang mit den aktuellen Artikel. Verwenden Sie einen Punkt (.) Als Dezimaltrennzeichen und ein Komma (,) zwischen Breiten- und L&auml;ngengrad. Verwenden Sie das Minuszeichen (-) f&uuml;r negative Werte. Plus-Zeichen (+) f&uuml;r positive Werte, ist nicht zwingend erforderlich. Der Button auf der rechten Seite beginnt eine visuelle Suche oder 'Adressen' Suche. Wenn Sie fertig sind, klicken Sie auf die Schaltfl&auml;che 'Daten &uuml;bernehmen'.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/select-image.jpg'>
-<h3>Schritt 3: Optionales Bild</h3>
-Optional k&ouml;nnen Sie ein kleines Introbild f&uuml;r den Artikel festlegen. Es wird innerhalb des Pop-up Fensters &uuml;ber dem Marker angezeigt. Parameter, wie die Bild-Ausrichtung, Alt-Text und Caption k&ouml;nnen auch verwendet werden.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/article-view.jpg'>
-<h3>Schritt 4: Sehen Sie das Ergebnis</h3>
-&Ouml;ffnen Sie den Artikel auf Ihrer Webseite. Sie sollten eine Google-Karte unter Ihrem Artikel sehen, mit einem Marker anstelle der im Artikel eingetragenen Koordinaten.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/plugin-manager.jpg'>
-<h3>Schritt 5: Fehlerbehebung</h3>
-Wenn Sie die Karte nicht sehen oder die Einstellungen nicht stimmen, k&ouml;nnen Sie dies im Plug-in Manager &auml;ndern.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/plugin-options.jpg'>
-<h3>Schritt 6: Anpassung</h3>
-Stellen Sie sicher, dass das Plugin aktiviert ist und &auml;ndern Sie die Einstellung basierend auf Ihre Anforderungen.
-</p>
-<br class='clr'>
-"
-
-MOD_CONTENTMAP_INSTRUCTIONS_TITLE="Module Nutzung"
-MOD_CONTENTMAP_INSTRUCTIONS_DSC="
-<p>
-<img src='http://www.turismo.eu/download/en-GB/contentmap-module-new.jpg'>
-<h3>Schritt 1: Module Erstellung</h3>
-&Ouml;ffnen Sie den Module Manager und erstellen Sie ein neues Modul. Als Modultyp w&auml;hlen Sie "ContentMap" aus.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/contentmap-module-filtering.jpg'>
-<h3>Schritt 2: Einstellen der Filter</h3>
-Die Einstellungen sind in Gruppen zusammengefasst. Filtereinstellungen finden Sie im unteren Bereich.
-</p>
-<br class='clr'>
-
-<p>
-<img src='http://www.turismo.eu/download/en-GB/contentmap-module.jpg'>
-<h3>Schritt 3: Sehen Sie das Ergebnis</h3>
-Gehen Sie zu der Stelle auf Ihrer Webseite an der das Moduls angezeigt wird. Sie sollten eine Google-Karte sehen, mit Markierungen basierend auf den Filterkriterien.
-</p>
-<br class='clr'>
-"
+COM_CONTENTMAP_INSTRUCTIONS_DSC="<p>Once installed ContentMap from the Extensions Manager, you will find in your site the ContentMap plugin and module.</p><p>ContentMap plugin inserts a map under the text of the article with a single marker placed according to the coordinates within the article itself. <a href='http://www.turismo.eu/itinerari/401-due-giorni-a-roma-ecco-cosa-vedere.html' target='_blank'>Exemple</a></p><br /><h3>Step 1: Edit your articles and insert the coordinates</h3><p>Open the <strong>Plugin Manager</strong> and make sure that the ContentMap plugin is enabled.<br /> Open the <strong>Article Manager</strong> and create a new article, or edit an existing one.<br />Click on the tab 'Publish'.<br />On the bottom right you will find the parameter <strong><em>ContentMap</em></strong>:<br /><br />By clicking on the icon next to it a window will open and will help you get the coordinates of the location associated with the current article and correctly position the marker on the map. Enter the address in the <em>'Please enter address'</em>, click on <em>'Search'</em> and at the end of search click on the button <em>'Return Data'</em>.<p><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_fase1b.png'></p><p>You can also fill out directly the field 'ContentMap': use a dot (.) as decimal separator and a comma (,) between latitude and longitude. Use Minus sign (-) for negative values. Plus sign (+) is accepted as well, but it is not mandatory. <br /><br />The parameter <strong><em>Marker style</em></strong> allows you to choose a custom marker for this article that goes to replace the marker set in the parameters of the plugin. <br /> <br /> Now you can save the article in frontend and see the result: a Google Map will appear below the article text.</p><br /><h3><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_fase2_small.png' style='float: right; margin: 5px;'>Step 2: Insert an image on the balloon</h3><p>Clicking in frontend on the the marker just entered, it opens a balloon containing the article title and the intro text. If you want to also insert an image, you can bring up the picture in the intro text of the article. <br /> Then back to <strong> Management Articles </strong> and let's edit the article, open the tab 'Images and links'. Select an <strong><em>Intro Image</em> </strong> and save. Check the site and you'll see that the image appears in the balloon. The parameters 'Image Float', 'Alt text' and 'Caption' will be used also, but consider that only the parameter 'Intro Image' is used in the balloon. The parameter 'Full article image' will instead be ignored. <p> If you do not see the parameter 'Intro Image', check in Article Manager> Options> Editing Layout that the parameter 'Administrator Images and Links' is set to Yes </p><br /><h3>Step 3: Parameters customization</h3><p>Open <strong>Plugin Manager  &gt; ContentMap</strong> and you will find all the available parameters to customize your maps within the articles:</p><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_fase3.png' alt='With Get Directions link you can obtain this result' style='float: right; margin: 5px;' /><ul><li><em>Width</em>: you can set a fixed width in pixels or percentage.</li><li><em>Height</em>: you can set a fixed height in pixels.</li><li><em>Zoom level</em>: you can set the default zoom maps from 1 (less zoom) to 21 (higher zoom).</li><li><em>Map type</em>: you can choose between Road, Satellite, Hybrid and Terrain map.</li><li><em>Enabled Street view</em>: if enabled, this parameter will insert the street view below the maps, a feature of great visual impact as it allows you to actually see the place indicated by the marker.</li><li><em>Markers icon</em>: this parameter sets a default icon for all maps. The options are many, but it is also possible to add other icons directly in the folder media/contentmap/markers/icons</li><li><em>Open balloon</em>: you can choose whether to open the balloon with a click, hover or disable the opening.</li><li><em>Width</em>: you can set the maximum width of the balloon, in pixels.</li><li><em>Show title</em>: sets whether to show or hide the article title inside the balloon.</li><li><em>Linked titles</em>: if set to Yes, the article title inside the balloon will have a link to the article itself.</li><li><em>URL Target Window</em>: sets the target of the link of the article title inside the balloon.</li><li><em>Show image</em>: sets whether or not to display the image associated with the intro text(see Step 2)</li><li><em>Show author alias</em>: if set to Show, and if the parameter 'Created by alias' has been compiled, it will appear in the balloon.</li><li><em>Show creation date</em>: you can choose whether to show the creation date of the article in the balloon.</li><li><em>Show Intro Text</em>: you can choose whether to show the intro text within the balloon.</li><li><em>Article text limit</em>: sets a limit to the number of characters displayed in the intro text within the balloon.</li><li><em>Show 'Get Directions' link</em>: if set to Show, within the balloon will appear the link to Google Maps to calculate your route to get to the point marked by the marker, the link to see the street view of the place and a field where you can enter an address and see so directly in the map the route to the place indicated (look the image above).</li></ul> <br /><br />"
+MOD_CONTENTMAP_INSTRUCTIONS_TITLE="Module usage"
+MOD_CONTENTMAP_INSTRUCTIONS_DSC="The ContentMap module inserts, in the desired module position, a Google Maps with multiple markers associated with their articles. <a href='http://www.turismo.eu/itinerari.html' target='_blank'>Exemple</a><br /><p>After entering the coordinates in <u>at least</u> two articles, you can create with the module Google Maps with multiple markers, we see how ... </p><p>Open <strong>Module Manager</strong> and create a new 'ContentMap' module. <br /> Publish the module in one of the available module positions in your template, possibly one allowing enough space to see the map. <br /> Now check the site: your map is visible. <br /> As you can see it was very easy!</p><br /><h3><img src='http://www.opensourcesolutions.es/images/istruzioni-contentmap/contentmap_modulo.png' alt='ContentMap module' title='ContentMap module' style='float: right; margin: 5px;'/>Step 2: Setting desidered filters</h3><p>The module groups places defined in articles so, in addition to the above options described for the plugin, there are some other parameters available:</p><ul><li><em>Center</em>: centers the map with the specified coordinates.</li><li><em>URL Track KML file</em>: if you enter the URL of a KML track, this will be displayed on the map.</li><li><em>Cluster</em>: groups the markers increasing the performance of the display. Useful when the map contains many markers.</li><li><em>Show Filter based on categories under the map</em>: under the map shows the categories of Joomla, with the possibility to select which to see in the map. Useful if you have items with the coordinates, though belonging to different categories of Joomla.</li><li><em>Featured Articles</em>: you can choose whether to show all items, or only those featured, or only those not featured.</li><li><em>Filtering type</em>: you can set a filter inclusive (include only the categories specified in the next parameter) or exclusive (include all categories except as indicated in the following parameter)</li><li><em>Categories</em>: select which categories to include or exclude from the map.</li><li><em>Authors</em>: select which authors to include or exclude from the map.</li></ul><p></span> Beside an example of how can be your map</p><br />"
