--- a/language/es-ES/es-ES.com_contentmap.sys.ini
+++ b/language/es-ES/es-ES.com_contentmap.sys.ini
@@ -6,7 +6,7 @@ COM_CONTENTMAP_DESCRIPTION="Muestra en un mapa de Google lugares asociados a los
 COM_CONTENTMAP_MENU="ContentMap"
 
 ;Component page
-COM_CONTENTMAP_PURCHASE="Esto es una versión no-comercial de ContentMap. Elimina la firma de [Powered by ContentMap] debajo de los mapas, comprando la versión de pago.<br /> No hay otras limitaciones en funcionalidad, pero comprando un código de licencia puedes ayudarnos a continuar con el desarrollo y soporte."
+COM_CONTENTMAP_PURCHASE="Esto es una versión no-comercial de ContentMap. Elimina la firma de debajo de los mapas, comprando la versión de pago.<br /> No hay otras limitaciones en funcionalidad, pero comprando un código de licencia puedes ayudarnos a continuar con el desarrollo y soporte."
 COM_CONTENTMAP_BUYNOW="Comprar ahora."
 COM_CONTENTMAP_INSTRUCTIONS_LBL="Instrucciones"
 COM_CONTENTMAP_INSTRUCTIONS_TITLE="Uso del plugin"
