aggiunto il watermark al modulo e al plugin

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -104,3 +104,19 @@ CONTENTMAP_HIDE_STREETVIEW_CONTROL="Hide Street View controls"
 CONTENTMAP_HIDE_ZOOM_CONTROL="Hide Zoom controls"
 CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Hide the Street View controls on the map"
 CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Hide the Zoom controls on the map"
+
+CONTENTMAP_WATERMARK_URL_LBL="Watermark Url"
+CONTENTMAP_WATERMARK_URL_DSC="Allows you to specify the URL of an image to use as a watermark"
+CONTENTMAP_WATERMARK_POSITION_LBL="Watermark position"
+CONTENTMAP_WATERMARK_POSITION_TOP_CENTER="Top center"
+CONTENTMAP_WATERMARK_POSITION_TOP_LEFT="Top left"
+CONTENTMAP_WATERMARK_POSITION_TOP_RIGHT="Top right"
+CONTENTMAP_WATERMARK_POSITION_LEFT_TOP="Left top"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_TOP="Right top"
+CONTENTMAP_WATERMARK_POSITION_LEFT_CENTER="Left center"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_CENTER="Right center"
+CONTENTMAP_WATERMARK_POSITION_LEFT_BOTTOM="Left bottom"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_BOTTOM="Right bottom"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_CENTER="Bottom center"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_LEFT="Bottom left"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_RIGHT="Bottom right"
