Aggiornati i file di lingua per l'imminente rilascio.

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -62,10 +62,13 @@ CONTENTMAP_INFOWINDOW_SHOWALIAS_LBL="Author alias"
 CONTENTMAP_INFOWINDOW_SHOWDATE_LBL="Creation date"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_LBL="Article text limit"
 CONTENTMAP_INFOWINDOW_TEXT_SIZE_DSC="Set a limit of number of characters in article text to show."
+CONTENTMAP_INTRO_CLEAN_HTML_TAGS_LBL="Filter html tag from intro text"
+CONTENTMAP_INTRO_CLEAN_HTML_TAGS_DSC="Enable/disable filter html tag from intro text"
 
 ; Filtering Options section
 CONTENTMAP_FILTERING_OPTIONS_LBL="Filtering Options"
 CONTENTMAP_CATEGORY_LEGEND_FILTER_LBL="Filter based on categories/tag under the map."
+CONTENTMAP_CATEGORY_LEGEND_FILTER_DSC="Enable/disable Filter based on categories or tag (only in Joomla 3.x) under the map."
 CONTENTMAP_FEATURED_ARTICLES_LBL="Featured Articles"
 CONTENTMAP_FEATURED_ARTICLES_DSC="Filter based on 'Featured' property."
 CONTENTMAP_ONLYFEATURED="Only featured"
