--- a/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
@@ -104,3 +104,24 @@ CONTENTMAP_HIDE_STREETVIEW_CONTROL="Скрыть управление видом
 CONTENTMAP_HIDE_ZOOM_CONTROL="Скрыть управление масштабом"
 CONTENTMAP_HIDE_STREETVIEW_CONTROL_DSC="Скрыть элементы управления видом улицы на карте"
 CONTENTMAP_HIDE_ZOOM_CONTROL_DSC="Скрыть элементы управления масштабом на карте"
+
+CONTENTMAP_INTRO_CLEAN_HTML_TAGS_LBL="Filter html tag from intro text"
+CONTENTMAP_INTRO_CLEAN_HTML_TAGS_DSC="Enable/disable filter html tag from intro text"
+
+CONTENTMAP_CATEGORY_LEGEND_FILTER_DSC="Enable/disable Filter based on categories or tag (only in Joomla 3.x) under the map."
+
+CONTENTMAP_WATERMARK_URL_LBL="Url Watermark"
+CONTENTMAP_WATERMARK_URL_DSC="Allows you to specify the URL of an image to use as a watermark"
+CONTENTMAP_WATERMARK_POSITION_LBL="Watermark position"
+CONTENTMAP_WATERMARK_POSITION_TOP_CENTER="Top center"
+CONTENTMAP_WATERMARK_POSITION_TOP_LEFT="Top left"
+CONTENTMAP_WATERMARK_POSITION_TOP_RIGHT="Top right"
+CONTENTMAP_WATERMARK_POSITION_LEFT_TOP="Left top"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_TOP="Right top"
+CONTENTMAP_WATERMARK_POSITION_LEFT_CENTER="Left center"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_CENTER="Right center"
+CONTENTMAP_WATERMARK_POSITION_LEFT_BOTTOM="Left bottom"
+CONTENTMAP_WATERMARK_POSITION_RIGHT_BOTTOM="Right bottom"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_CENTER="Bottom center"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_LEFT="Bottom left"
+CONTENTMAP_WATERMARK_POSITION_BOTTOM_RIGHT="Bottom right"
