corretto link alla pagina con l'anteprima icone

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.ini
@@ -2,6 +2,6 @@
 CONTENTMAP_JAVASCRIPT_REQUIRED="ContentMap requires Javascript support."
 CONTENTMAP_NO_DATA="There are no articles containing coordinates viewable by this module. Geolocalize some articles, and check your filters in the module options."
 CONTENTMAP_GET_DIRECTIONS="Get directions"
-CONTENTMAP_PLEASE_SAVE="Please save in order to see the updated icon. <a href='http://www.opensourcesolutions.es/marker-icons.html' target='_blank'>See all default icons preview</a>"
+CONTENTMAP_PLEASE_SAVE="Please save in order to see the updated icon. <a href='http://www.opensourcesolutions.es/en/marker-icons.html' target='_blank'>See all default icons preview</a>"
 CONTENTMAP_MARKERS_PREVIEW="Marker preview"
 CONTENTMAP_FROM_ADDRESS="From address"
