Prima integrazione della mappa dai dati Tag visualizzata con le Geochart api di Google

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -92,6 +92,7 @@ CONTENTMAP_DATASOURCE_WARNING="Sorgenti dati differenti possono avere bisogno di
 CONTENTMAP_DATASOURCE_LBL="Sorgente dati"
 CONTENTMAP_JOOMLA_ARTICLES="Articoli di Joomla"
 CONTENTMAP_JOOMLA_USERS="Utenti di Joomla"
+CONTENTMAP_JOOMLA_TAGS="Tag di Joomla"
 CONTENTMAP_CONNECTOR_SMF="Simple Machines Forum"
 CONTENTMAP_CONNECTOR="Connettore esterno"
 CONTENTMAP_CONNECTOR_URL_LBL="URL del connettore"
