Aggiornati i file di lingua ITA e ENG

--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -90,7 +90,6 @@ CONTENTMAP_API_KEY_DSC="Google Maps API v.3 does not require an API key, but if 
 
 CONTENTMAP_DATASOURCE_WARNING="Different data source may need additional configuration. See related manual page."
 CONTENTMAP_DATASOURCE_LBL="Data source"
-CONTENTMAP_JOOMLA_ARTICLES="Joomla articles"
 CONTENTMAP_JOOMLA_USERS="Joomla users"
 CONTENTMAP_CONNECTOR_SMF="Simple Machines Forum"
 CONTENTMAP_CONNECTOR="External connector"
@@ -124,12 +123,24 @@ CONTENTMAP_WATERMARK_POSITION_BOTTOM_CENTER="Bottom center"
 CONTENTMAP_WATERMARK_POSITION_BOTTOM_LEFT="Bottom left"
 CONTENTMAP_WATERMARK_POSITION_BOTTOM_RIGHT="Bottom right"
 
+CONTENTMAP_CATEGORIES="Categories"
+CONTENTMAP_TAGS="TAGS"
 
 ;geo_chart_settings
+GEO_TAB_TITLE="GEO Chart Settings"
+CONTENTMAP_DATASOURCE_LBL_DESC="Show the Chart Map by the Joomla TAG or the Google Map by the Joomla articles."
+CONTENTMAP_JOOMLA_ARTICLES="Joomla articles - Google Map"
+CONTENTMAP_JOOMLA_TAGS="Joomla TAGS - Chart Map"
+CONTENTMAP_DISABLE_GRADATION_LABEL="Disable gradient"
+CONTENTMAP_DISABLE_GRADATION_DESC="Enable/disable the color and size gradient"
 GEO_DISPLAYMODE_LABEL="Display mode"
 GEO_DISPLAYMODE_DESC="Which type of map this is. the datatable format must match the value specified."
 GEO_REGION_LABEL="Region"
+GEO_REGION_DESC="The area to display on the map."
 GEO_RESOLUTION_LABEL="Resolution"
+GEO_RESOLUTION_DESC="<b>'countries'</b> - Supported for all regions, except for US state regions.<br />
+<b>'provinces'</b> - Supported only for country regions and US state regions. Not supported for all countries; please test a country to see whether this option is supported.<br />
+<b>'metros'</b> - Supported for the US country region and US state regions only."
 GEO_ENABLEREGIONINTERACTIVITY_LABEL="Enable region interactivity"
 GEO_ENABLEREGIONINTERACTIVITY_DESC="If yes, enable region interactivity, including focus and tool-tip elaboration on mouse hover"
 GEO_KEEPASPECTRATIO_LABEL="Keep aspect ratio"
