--- a/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.admin.ini
@@ -125,3 +125,41 @@ CONTENTMAP_WATERMARK_POSITION_RIGHT_BOTTOM="Справа снизу"
 CONTENTMAP_WATERMARK_POSITION_BOTTOM_CENTER="Внизу по центу"
 CONTENTMAP_WATERMARK_POSITION_BOTTOM_LEFT="Внизу слева"
 CONTENTMAP_WATERMARK_POSITION_BOTTOM_RIGHT="Внизу справа"
+
+;geo_chart_settings
+GEO_TAB_TITLE="GEO Chart Settings"
+CONTENTMAP_DATASOURCE_LBL_DESC="Show the Chart Map by the Joomla TAG or the Google Map by the Joomla articles."
+CONTENTMAP_JOOMLA_ARTICLES="Joomla articles - Google Map"
+CONTENTMAP_JOOMLA_TAGS="Joomla TAGS - Chart Map"
+CONTENTMAP_DISABLE_GRADATION_LABEL="Disable gradient"
+CONTENTMAP_DISABLE_GRADATION_DESC="Enable/disable the color and size gradient"
+GEO_DISPLAYMODE_LABEL="Display mode"
+GEO_DISPLAYMODE_DESC="Which type of map this is. the datatable format must match the value specified."
+GEO_REGION_LABEL="Region"
+GEO_REGION_DESC="The area to display on the map."
+GEO_RESOLUTION_LABEL="Resolution"
+GEO_RESOLUTION_DESC="<b>'countries'</b> - Supported for all regions, except for US state regions.<br />
+<b>'provinces'</b> - Supported only for country regions and US state regions. Not supported for all countries; please test a country to see whether this option is supported.<br />
+<b>'metros'</b> - Supported for the US country region and US state regions only."
+GEO_ENABLEREGIONINTERACTIVITY_LABEL="Enable region interactivity"
+GEO_ENABLEREGIONINTERACTIVITY_DESC="If yes, enable region interactivity, including focus and tool-tip elaboration on mouse hover"
+GEO_KEEPASPECTRATIO_LABEL="Keep aspect ratio"
+GEO_KEEPASPECTRATIO_DESC="Keep aspect ratio desc"
+GEO_MARKEROPACITY_LABEL="Marker opacity"
+GEO_MARKEROPACITY_DESC="The opacity of the markers, where 0.0 is fully transparent and 1.0 is fully opaque."
+GEO_COLORAXIS_MINVALUE_LABEL="Min Value"
+GEO_COLORAXIS_MINVALUE_DESC="Minimum value of color column in chart data. if present, specifies a minimum value for chart color data."
+GEO_COLORAXIS_MAXVALUE_LABEL="Max Value"
+GEO_COLORAXIS_MAXVALUE_DESC="Maximum value of color column in chart data. if present, specifies a maximum value for chart color data."
+GEO_COLORAXIS_FROMCOLOR_LABEL="From Color"
+GEO_COLORAXIS_FROMCOLOR_DESC="Starting color in gradient"
+GEO_COLORAXIS_TOCOLOR_LABEL="To color"
+GEO_COLORAXIS_TOCOLOR_DESC="Ending color in gradient"
+GEO_DATALESSREGIONCOLOR_LABEL="Dataless region color"
+GEO_DATALESSREGIONCOLOR_DESC="Colors to assign to regions with no associated data."
+AUTO_CHOOSE_BASED_ON_THE_FORMAT_OF_THE_DATA="Auto - choose based on the format of the data"
+REGION_MAP="Region Map"
+MARKER_MAP="Marker Map"
+COUNTRIES="Countries"
+PROVINCES="Provinces"
+METROS="Metros"
