Corretto il parametro per l'allineamento della mappa del plugin.

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -165,7 +165,15 @@ METROS="USA"
 
 CONTENTMAP_POSITION_LBL="Posizione"
 CONTENTMAP_POSITION_DSC="Puoi scegliere in che posizione dell'articolo visualizzare la ContentMap"
+CONTENTMAP_BEFORECONTENT="Alto"
 CONTENTMAP_BEFORECONTENT_LEFT="Alto Sinistra"
 CONTENTMAP_BEFORECONTENT_RIGHT="Alto Destra"
 CONTENTMAP_AFTERCONTENT_LEFT="Basso Sinistra"
 CONTENTMAP_AFTERCONTENT_RIGHT="Basso Destra"
+CONTENTMAP_AFTERCONTENT="Basso"
+
+CONTENTMAP_EXCLUDE_ARTICLES_LBL="Escludi da Articoli"
+CONTENTMAP_EXCLUDE_ARTICLES_DESC="Inserisci gli ID degli articoli dove non vuoi visualizzare il plugin ContentMap. Dividi gli ID con la virgola."
+
+CONTENTMAP_EXCLUDE_CATEGORIES_LBL="Escludi da Categorie"
+CONTENTMAP_EXCLUDE_CATEGORIES_DESC="Inserisci gli ID delle categorie dove non vuoi visualizzare il plugin ContentMap. Dividi gli ID con la virgola."
