Aggiornate le lingue.

--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.ini
@@ -6,5 +6,5 @@ CONTENTMAP_PLEASE_SAVE="Salva per visualizzare l'icona aggiornata"
 CONTENTMAP_MARKERS_PREVIEW="Anteprima icona marker"
 CONTENTMAP_FROM_ADDRESS="Dall'indirizzo"
 
-CONTENTMAP_TAGS_NO_DATA="Non ci sono tags visualizzabili da questo modulo. Aggiungi alcuni tag con nomi di città."
-CONTENTMAP_GEOCHART_ELEMENTS="Elementi"
+CONTENTMAP_TAGS_NO_DATA="Non ci sono tags visualizzabili da questo modulo. Aggiungi alcuni tag con nomi di città o regioni ed associali ai rispettivi elementi."
+CONTENTMAP_GEOCHART_ELEMENTS="#"
