--- a/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.ini
+++ b/extras/lib_contentmap/language/ru-RU/ru-RU.contentmap.ini
@@ -5,3 +5,6 @@ CONTENTMAP_GET_DIRECTIONS="Получить направления"
 CONTENTMAP_PLEASE_SAVE="Пожалуйста, сохранитесь для того, чтобы увидеть значок предпросмотра обновления"
 CONTENTMAP_MARKERS_PREVIEW="Предпросмотр маркера"
 CONTENTMAP_FROM_ADDRESS="Начальный адрес"
+
+CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_GEOCHART_ELEMENTS="#"
