--- a/extras/lib_contentmap/language/cs-CZ/cs-CZ.contentmap.ini
+++ b/extras/lib_contentmap/language/cs-CZ/cs-CZ.contentmap.ini
@@ -5,3 +5,6 @@ CONTENTMAP_GET_DIRECTIONS="Najít trasu"
 CONTENTMAP_PLEASE_SAVE="Dejte uložit, aby jste viděli nový náhled ikony"
 CONTENTMAP_MARKERS_PREVIEW="Náhled značky"
 CONTENTMAP_FROM_ADDRESS="From address"
+
+CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_GEOCHART_ELEMENTS="#"
