--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.ini
@@ -5,3 +5,6 @@ CONTENTMAP_GET_DIRECTIONS="Calcular la distancia"
 CONTENTMAP_PLEASE_SAVE="Guardar para que aparezca el icono de actualización"
 CONTENTMAP_MARKERS_PREVIEW="Ver icon marker"
 CONTENTMAP_FROM_ADDRESS="From address"
+
+CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_GEOCHART_ELEMENTS="#"
