--- a/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.ini
+++ b/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.ini
@@ -5,3 +5,6 @@ CONTENTMAP_GET_DIRECTIONS="Bereken de afstand"
 CONTENTMAP_PLEASE_SAVE="Opslaan om het pictogram weer bijgewerkt"
 CONTENTMAP_MARKERS_PREVIEW="Voorbeeldpictogram marker"
 CONTENTMAP_FROM_ADDRESS="From address"
+
+CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_GEOCHART_ELEMENTS="#"
