--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.ini
@@ -5,3 +5,6 @@ CONTENTMAP_GET_DIRECTIONS="Beräkna avståndet"
 CONTENTMAP_PLEASE_SAVE="Spara för att visa ikonen uppdateras"
 CONTENTMAP_MARKERS_PREVIEW="Preview icon marker"
 CONTENTMAP_FROM_ADDRESS="From address"
+
+CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_GEOCHART_ELEMENTS="#"
